--- a/function-aws/features/function-aws-groovy/skeleton/gradle-build/build.gradle
+++ b/function-aws/features/function-aws-groovy/skeleton/gradle-build/build.gradle
@@ -7,15 +7,15 @@ jar {
     }
 }
 
-if(new File("${System.getProperty("user.home")}/.aws/credentials").exists()) {
-    task deploy(type: jp.classmethod.aws.gradle.lambda.AWSLambdaMigrateFunctionTask, dependsOn: shadowJar) {
-        functionName = "@project.name@"
-        handler = "@mainClassName@::@project.propertyName@"
-        role = "arn:aws:iam::${aws.accountId}:role/lambda_basic_execution"
-        runtime = com.amazonaws.services.lambda.model.Runtime.Java8
-        zipFile = shadowJar.archivePath
-        memorySize = 256
-        timeout = 60
-    }
 
+task deploy(type: jp.classmethod.aws.gradle.lambda.AWSLambdaMigrateFunctionTask, dependsOn: shadowJar) {
+    doFirst {
+        role = "arn:aws:iam::${aws.accountId}:role/lambda_basic_execution"
+    }
+    functionName = "@project.name@"
+    handler = "@mainClassName@::@project.propertyName@"
+    runtime = com.amazonaws.services.lambda.model.Runtime.Java8
+    zipFile = shadowJar.archivePath
+    memorySize = 256
+    timeout = 60
 }
