--- a/function-aws-alexa/skeleton/gradle-build/build.gradle
+++ b/function-aws-alexa/skeleton/gradle-build/build.gradle
@@ -7,17 +7,19 @@ jar {
     }
 }
 
-if(new File("${System.getProperty("user.home")}/.aws/credentials").exists()) {
-    task deploy(type: jp.classmethod.aws.gradle.lambda.AWSLambdaMigrateFunctionTask, dependsOn: shadowJar) {
-        functionName = "@app.name@"
-        handler = "io.micronaut.function.aws.alexa.AlexaFunction"
+
+task deploy(type: jp.classmethod.aws.gradle.lambda.AWSLambdaMigrateFunctionTask, dependsOn: shadowJar) {
+    doFirst {
         role = "arn:aws:iam::${aws.accountId}:role/lambda_basic_execution"
-        runtime = com.amazonaws.services.lambda.model.Runtime.Java8
-        zipFile = shadowJar.archivePath
-        memorySize = 256
-        timeout = 60
     }
+    functionName = "@app.name@"
+    handler = "io.micronaut.function.aws.alexa.AlexaFunction"
+    runtime = com.amazonaws.services.lambda.model.Runtime.Java8
+    zipFile = shadowJar.archivePath
+    memorySize = 256
+    timeout = 60
 }
+
 
 shadowJar {
     transform(com.github.jengelman.gradle.plugins.shadow.transformers.Log4j2PluginsCacheFileTransformer)
